#205 Fix misaligned rows regression.

--- a/src/scss/components/item/_table.scss
+++ b/src/scss/components/item/_table.scss
@@ -200,6 +200,10 @@
 	 		transparent ($item-table-row-height + $space-min / 2),
 	 		transparent (2 * $item-table-row-height + $space-min / 2));
 	 	background-attachment: local;
+
+	 	> div {
+		 	position: relative;
+	 	}
 	}
 
 	.item {
